k8s/backend-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      component: backend
  template:
    metadata:
      labels:
        component: backend
    spec:
      containers:
        - name: backend
          image: wakidur/kube-multi-container-backend
          resources:
            limits:
              memory: "1208Mi"
              cpu: "500m"
          ports:
            - containerPort: 5000
