k8s/backend-clusterip-service.yml
apiVersion: v1
kind: Service
metadata:
  name: backend-clusterip-service
spec:
  type: ClusterIP
  selector:
    component: backend
  ports:
  - port: 5000
    targetPort: 5000
