k8s/frontend-clusterip-service.yml
apiVersion: v1
kind: Service
metadata:
  name: frontend-clusterip-service
spec:
  type: ClusterIP
  selector:
    component: frontend
  ports:
    - port: 3000
      targetPort: 3000
